// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Russian language Empty input 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Электрическая зубная щётка",
  },
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Вакуумные компресионные мешки",
  },
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Кабель Lightning — USB-A",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Батарейки алкалиновые — 12 штук в упаковке",
  },
]
`;

exports[`Russian language Equality 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "[Электрическая] [зубная] [щётка]",
  },
]
`;

exports[`Russian language Normalization 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Электрическая зубная [щё]тка",
  },
]
`;

exports[`Russian language Partiles 1`] = `
Array [
  Object {
    "id": 40,
    "rating": undefined,
    "title": "[В]акуумные компресионные мешки",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Батарейки алкалиновые — 12 штук [в] упаковке",
  },
]
`;

exports[`Russian language Stemming 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Электрическая [зубн]ая щётка",
  },
]
`;
